# LLM-resume-evaluator

./: .gitignore  README.md  api.py  api_evaluator.py  evaluator.py  pyproject.toml
sample_resumes/: John_Doe_Demo_Resume.docx
static/: app.js  index.html  styles.css
